// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render UserListItem 1`] = `
<div>
  <label
    className="user-select"
  >
    <input
      checked={false}
      className="user-select__checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    Robert
  </label>
</div>
`;

exports[`render should render UserListItem for alt user 1`] = `
<div>
  <label
    className="user-select user-select--picked"
  >
    <input
      checked={true}
      className="user-select__checkbox"
      onChange={[Function]}
      type="checkbox"
    />
    Peter
  </label>
</div>
`;
